--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: BY Blog
-SEOTitle: 柏荧的博客 | BY Blog
+SEOTitle: 醉の晓的博客 | BY Blog
 header-img: img/post-bg-desk.jpg
 email: 1004159353@qq.com
 description: "Every failure is leading towards success."
